--- a/public/style.css
+++ b/public/style.css
@@ -13,13 +13,20 @@ body {
 .card {
   width: 113px;
   height: 157px;
+  margin-top: -63px;
+  margin-bottom: -63px;
+}
+#centercolumn .card {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: -90px;
 }
 
 #center {
   display: flex;
 }
 #center > .cardspread {
-  flex-flow: column-reverse;
+  flex-flow: column;
 }
 #centercolumn {
   width: 100%;
